# deepstream-test5

./: CMakeLists.txt  MAVPy.py  deepstream-test5-app  deepstream_test5_app_main.c  udpmavlink  udpmavlink.c
cSocketTest/: libwebsocketClient  libwebsocketClient.c
configs/: test5_config_file_src_infer_aws.txt
cppserver/: main_tcp_server  main_tcp_server.cpp
cppserver/boost.io/: main_server  main_server.cpp
jsonparser/: Makefile  README.md  json.c  json_demo_compound  json_demo_compound.c  json_demo_simple  json_demo_simple.c
jsonparser/__MACOSX/: ._mjson.h
mavlinkCtest/: mavlinktest  mavlinktest.c
socketlistener/: client.py  client2.py  clinet_V1.py  externalPy.py  note.md  socketInC  socketInC.c  socketInPython  socketInPython.c  socktInC  test.json  testCApi.c
telemertyCode/: CMakeLists.txt  SerialCheck.py  telemetry.cpp  telemetryV2.cpp
